--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
     <title>Malleus Maleficarum Analyzed</title>
-    <script defer src="js/three.js"></script>
-    <script defer src="js/tween.min.js"></script>
-    <script defer src="js/TrackballControls.js"></script>
-    <script defer src="js/CSS3DRenderer.js"></script>
+    <script defer src="/js/data.js"></script>
+    <script defer src="/js/three.js"></script>
+    <script defer src="/js/tween.min.js"></script>
+    <script defer src="/js/TrackballControls.js"></script>
+    <script defer src="/js/CSS3DRenderer.js"></script>
+    <script defer src="https://d3js.org/d3.v7.min.js"></script>
   </head>
   <body data-gr-c-s-loaded="true">
     <div id="app"></div>
