--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/datavis-malleus-maleficarum/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
     <title>Malleus Maleficarum Analyzed</title>
-    <script defer src="/js/data.js"></script>
-    <script defer src="/js/three.js"></script>
-    <script defer src="/js/tween.min.js"></script>
-    <script defer src="/js/TrackballControls.js"></script>
-    <script defer src="/js/CSS3DRenderer.js"></script>
+    <script defer src="/datavis-malleus-maleficarum/js/data.js"></script>
+    <script defer src="/datavis-malleus-maleficarum/js/three.js"></script>
+    <script defer src="/datavis-malleus-maleficarum/js/tween.min.js"></script>
+    <script
+      defer
+      src="/datavis-malleus-maleficarum/js/TrackballControls.js"
+    ></script>
+    <script
+      defer
+      src="/datavis-malleus-maleficarum/js/CSS3DRenderer.js"
+    ></script>
     <script defer src="https://d3js.org/d3.v7.min.js"></script>
   </head>
   <body data-gr-c-s-loaded="true">
